--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <java.version>11</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <junit.version>5.3.2</junit.version>
+        <surefire.version>2.22.0</surefire.version>
     </properties>
 
     <dependencies>
@@ -48,7 +50,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18</version>
+                <version>${surefire.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -63,7 +65,12 @@
                     </execution>
                 </executions>
             </plugin>
-
+            <!-- Maven Ver 3.6.0 Maven Site plugin is down level causing the site phase to fail -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.7.1</version>
+            </plugin>
         </plugins>
     </build>
 
@@ -76,3 +83,4 @@
             </plugin>
         </plugins>
     </reporting>
+</project>
