--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <java.version>11</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+	<junit.version>5.4.0</junit.version>
     </properties>
 
     <dependencies>
@@ -75,4 +76,5 @@
                 <version>2.22.0</version>
             </plugin>
         </plugins>
-    </reporting>
+   </reporting>
+</project>
