fix jupiter version to the latest (even there no need to include jupiter-api and junit 4 dependencies in POM, left them as is)

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <java.version>11</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <junit.version>5.7.0-M1</junit.version>
     </properties>
 
     <dependencies>
