--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
                 </executions>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.9.0</version>
+            </plugin>
+
         </plugins>
     </build>
 
