--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18</version>
+                <version>3.0.0-M2</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
