--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -14,8 +13,9 @@
         <java.version>11</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <junit.version>5.6.2</junit.version>
     </properties>
-
+    
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -63,7 +63,11 @@
                     </execution>
                 </executions>
             </plugin>
-
+				  <plugin>
+				    <groupId>org.apache.maven.plugins</groupId>
+				    <artifactId>maven-site-plugin</artifactId>
+				    <version>3.7.1</version>
+				  </plugin>
         </plugins>
     </build>
 
@@ -76,3 +80,4 @@
             </plugin>
         </plugins>
     </reporting>
+</project>
