leverage <skipTests>true</skipTests> property in pom to skip tests.

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <junit.version>5.9.1</junit.version>
+        <skipTests>true</skipTests>
     </properties>
 
     <dependencies>
